# FusionFinance

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
alpha/: features_market.py  gpu_ablation.py  gpu_ml.py  gpu_receipts.py  gpu_setmodel.py  metrics_proper.py
alpha/agents/: __init__.py  desk.py  models.py  orchestrator.py  providers.py
alpha/filing_alpha/: NOTICE  README.md  __init__.py  filing_fusion.py  filing_text.py  metrics.py  schemas.py  xbrl.py
alpha/verifier/: __init__.py  calibration.py  contract.py  evidence.py  gpu_policy.py  market_head.py  policy.py
configs/: fusionfinance-demo.json
demo/: contracts.py  execution.py  index.html  metrics.py  replay.json
docs/: README.md  SUBMISSION_PACKAGE.md  amd-compute.md  architecture.md  limitations.md  methodology.md
evidence/: README.md
evidence/amd/: environment.json  hardware.json  training.json
evidence/replay/: v1_source.json
presentation/: FusionFinance_Submission.html  video-script.md  video-storyboard.json
results/: amd_compute.json  decisions.jsonl  metrics.json
scripts/: build_fusion_artifacts.py  build_submission_archive.py  verify_amd.py  verify_media.py
tests/: test_agent_runtime.py  test_amd_publication.py  test_filing_alpha_integration.py  test_fusion_evidence.py  test_fusion_experiment.py  test_gpu_ml_build.py  test_media_release.py  test_public_artifact_build.py  test_release_surface.py  test_video_storyboard.py
