[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusionfinance"
version = "0.1.0"
description = "Auditable hybrid ML and agentic trading research system"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE", "NOTICE", "alpha/filing_alpha/NOTICE"]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "pydantic>=2.7,<3",
  "scikit-learn>=1.4,<2",
]

[project.urls]
Homepage = "https://fusionfinance2.vercel.app"
Repository = "https://github.com/FusionCube18712/FusionFinance"
Documentation = "https://github.com/FusionCube18712/FusionFinance#readme"
Issues = "https://github.com/FusionCube18712/FusionFinance/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
]

[tool.setuptools.packages.find]
include = ["alpha*", "demo*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
